Initial revision to bring code up-to-date.
Compiles with no errors or warnings and smoke tests pass.